live-classes/helm/3-tier-app-k8/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: apatranobis59/backend:2.0
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-2
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
